modal and server side productID

--- a/components/productSwiper/styles.css
+++ b/components/productSwiper/styles.css
@@ -33,3 +33,9 @@
     height: 50vh;
     width: 200px;
 }
+.mainPhotoModal{
+  display: block;
+  width: 70%;
+  height: 35vh;
+  object-fit:fill;
+}
