modal styling for it

--- a/components/productSwiper/styles.css
+++ b/components/productSwiper/styles.css
@@ -34,8 +34,7 @@
     width: 200px;
 }
 .mainPhotoModal{
-  display: block;
   width: 70%;
   height: 35vh;
-  object-fit:fill;
+  object-fit:cover;
 }
