--- a/components/productSwiper/styles.css
+++ b/components/productSwiper/styles.css
@@ -17,8 +17,10 @@
 .swiper-slide .mainPhoto {
   display: block;
   width: 100%;
-  height: 50vh;
-  object-fit:fill;
+  max-width: 550px;
+  height: 80%;
+  max-height: 50vh;
+  object-fit:cover;
 }
 
 /* .paginationPhotos{
